<resources>
    <string name="app_name">Bible Verse App</string>
    <string name="menu_verse">Verse</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_credits">Credits</string>
    <string name="fragment_verse_loading_verse">Loading bible verse…</string>
    <string name="fragment_verse_buttonShare">Share</string>
    <string name="fragment_verse_error_no_verse">No Bible verse available.</string>
    <string name="fragment_verse_error_no_internet">Error loading Bible verse. Check your internet connection!</string>
    <string name="fragment_credit_textViewCreditText">App Development by <a href="https://joshuah.ch">Joshua Hürzeler</a></string>
    <string name="fragment_credit_textViewCreditTitle">Credits</string>
    <string name="fragment_credit_textViewVerseTitle">Verse of the Day</string>
    <string name="fragment_credit_textViewVerseText">Powered by BibleGateway.com</string>
    <string name="fragment_credit_textViewThanksTitle">Special Thanks</string>
    <string name="fragment_credit_textViewThanksText">We extend our gratitude to BibleGateway.com for their generous provision of daily verses and unwavering commitment to sharing the Word of God.</string>
    <string name="preference_category_bible_version_title">Bible Version</string>
    <string name="preference_listPreference_bible_version_title">Select Bible Version</string>
    <string name="preference_listPreference_bible_version_default_value">NLT</string>
    <string name="preference_category_notifications_title">Notifications</string>
    <string name="preference_switchPreference_enable_notifications_title">Enable Daily Notifications</string>
    <string name="preference_switchPreference_enable_notifications_summary">Receive daily Bible verses</string>
    <string name="fragment_verse_share_chooser_title">Share Bible Verse</string>
    <string name="preference_notification_time_name">Notification Time</string>
    <string name="preference_notification_time_description">Please note that the notification might not work when the app is killed by the system in some Huawei, Xiaomi and OnePlus devices. Refer to dontkillmyapp.com for more information</string>
    <string name="preference_notification_time_current_setting">%s</string>
    <string name="notification_title">Daily Bible Verse</string>
    <string name="notification_channel_name">Daily Bible Verse Channel</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="preference_category_widget_title">Widget</string>
    <string name="preference_color_title">Choose Widget Text Color</string>
    <string name="preference_color_summary">Choose Text color for widget</string>
    <string name="preference_category_appearance_title">Appearance</string>
    <string name="preference_font_size_title">Font Size</string>
    <string name="preference_font_size_default_value">18</string>
    <string name="preference_widget_font_size_title">Choose Widget Font Size</string>
    
    <!-- Font Size Entries -->
    <string name="font_size_small">Small</string>
    <string name="font_size_medium">Medium</string>
    <string name="font_size_large">Large</string>
    <string name="font_size_extra_large">Extra Large</string>
</resources>