<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_credit_textViewCreditTitle"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"

        />

    <TextView
        android:id="@+id/fragment_credit_textViewCreditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/fragment_credit_textViewCreditText"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceBody1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_credit_textViewVerseTitle"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/fragment_credit_textViewVerseText"
        android:textAlignment="center"
        android:autoLink="web"
        android:focusable="true"
        android:textAppearance="?attr/textAppearanceBody1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_credit_textViewThanksTitle"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center"
        android:layout_marginTop="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/fragment_credit_textViewThanksText"
        android:textAlignment="center"
        android:autoLink="web"
        android:focusable="true"
        android:textAppearance="?attr/textAppearanceBody1" />

</LinearLayout>