<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/timePicker"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/settings_row_padding"
    android:paddingVertical="@dimen/settings_row_padding"
    android:hapticFeedbackEnabled="false"
    android:background="?attr/selectableItemBackground">

    <TextView
        android:id="@+id/timePickerTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/preference_notification_time_name"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

    <TextView
        android:id="@+id/timePickerCurrentSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/preference_notification_time_current_setting"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        android:textSize="@dimen/custom_preference_text_size"/>

    <TextView
        android:id="@+id/timePickerDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/preference_notification_time_description"
        android:textColor="?android:attr/textColorHint"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        android:textSize="@dimen/custom_preference_text_size"/>

</LinearLayout>
